# XuanHu-v0.01

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: accelerate_4x5090.yaml  cn_rag_hf_manifest.json  rag_seed_manifest.json
data/: agentic_rl_pairs.sample.jsonl  benchmark_cases.json  bianque_intake_sft.sample.jsonl  multiturn_casebook_10.json  sim_patient_cases.json  text_sft_stage1.sample.jsonl  train_medical_sft.sample.jsonl  vision_report_sft.sample.jsonl
docs/: README.md  agentic_rl_dataset_survey_zh.md  agentic_rl_synthesis.md  agentic_rl_synthesis_zh.md  architecture.md  benchmark_plan.md  clinical_first_visit_prompt_zh.md  hf_rag_audit_report_zh.md  huatuo_series_research_zh.md  interview_qa.md  rag_design.md  rag_sources_zh.md  stage1_training_plan_zh.md  todo_roadmap_zh.md  training_playbook.md
medagent/: __init__.py  config.py  langgraph_orchestrator.py  main.py  orchestrator.py  schema.py
scripts/: autodl_download_assets.sh  autodl_link_runtime_assets.sh  autodl_prepare_workspace.sh  autodl_remote_bootstrap.sh  autodl_remote_run.sh  build_rag_corpus.py  build_vector_rag_index.py  deploy_to_autodl.ps1  deploy_to_autodl.sh  download_medical_datasets.py  download_qwen_models.py  download_rag_sources.py  filter_agentic_rl_pairs.py  generate_demo_report.py  generate_hf_rag_audit_report.py  git_checkpoint.ps1  git_checkpoint.sh  inspect_autodl_assets.py  measure_rag_latency.py  prepare_bianque_intake_sft.py  prepare_medical_training_data.py  prepare_text_sft_stage1.py  run_healthbench_official.py  run_huatuo_vl_smoke.py  run_patient_sim_benchmark.py  (+9 more)
(+88 files in other folders)
