[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medagent-scaffold"
version = "0.1.0"
description = "Multi-agent medical assistant scaffold with benchmark comparison."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = ["transformers>=4.45.0", "datasets>=2.20.0", "peft>=0.12.0", "bitsandbytes>=0.43.0", "accelerate>=0.34.0", "torch>=2.2.0", "wandb>=0.18.0", "trl>=0.11.0"]

[tool.setuptools]
packages = ["medagent", "medagent.agents", "medagent.services", "medagent.benchmark"]
